@@ -28,6 +28,8 @@ with all sufficient information, see the ChangeLog file or Redmine
 * Integer
 
   * Integer.sqrt  [Feature #13219]
+  * Integer#step does no longer rescue exceptions when given
+    a step value which cannot be compared with #> to 0. [Feature #7688]
 
 * IO
 
